Update docstrings on the classes and functions
